reformed home page as commented
